<resources>
    <string name="app_name">Food.bank2021</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="remember_me">Remember me</string>
    <string name="map">map</string>
    <string name="Map" />
    <string name="ams">AMS</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="qr_code">QR Code</string>
    <string name="penalty">Penalty</string>
    <string name="username">Username</string>
    <string name="messenger">Messenger</string>
    <string name="donation">Donation</string>
    <string name="filter">Filter</string>
    <string name="confirmation">Confirmation</string>
    <string name="food_name">Food name</string>
    <string name="location">Location</string>
    <string name="amount">Amount</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="donor">Donor</string>
</resources>