<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.Share_food"
        android:textAlignment="center"
        android:gravity="center|top">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmation"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/electric_brown"
                android:paddingTop="30dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Are you sure you want to take this item?"
                android:textSize="17sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:paddingTop="20dp"
                android:paddingBottom="40dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textSize="18sp"
                    android:textColor="@color/olive"
                    android:textStyle="bold"
                    android:layout_gravity="start" />
                <TextView
                    android:id="@+id/confirm_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="start" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="18sp"
                    android:textColor="@color/olive"
                    android:textStyle="bold"
                    android:layout_gravity="start" />
                <TextView
                    android:id="@+id/confirm_location"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="start" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="18sp"
                    android:textColor="@color/olive"
                    android:textStyle="bold"
                    android:layout_gravity="start" />
                <TextView
                    android:id="@+id/confirm_amount"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="start" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    android:textSize="18sp"
                    android:textColor="@color/olive"
                    android:textStyle="bold"
                    android:layout_gravity="start" />
                <TextView
                    android:id="@+id/confirm_expirydate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="start" />
            </LinearLayout>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_login"
                android:backgroundTint="@color/old_gold"
                android:text="yes, I confirm"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_login"
                android:backgroundTint="@color/electric_brown"
                android:text="cancel"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>